--- a/docs/darkmode.css
+++ b/docs/darkmode.css
@@ -119,3 +119,13 @@ body.dark-mode {
 .dark-mode .dark-mode-toggle__label {
     background-color: #333;
 }
+
+/* Dark mode style for the disclaimer */
+.dark-mode .disclaimer {
+    color: #bbb;
+    border-left-color: #555;
+}
+
+.dark-mode .disclaimer h1 {
+    color: #f0f0f0;
+}
